--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yahoo_finance_api = { version = "1.0", features = ["blocking"] }
+chrono = { version = "0.4.19", features = ["serde"] }
+clap = "3.0.0-beta.2"
+yahoo_finance_api = { version = "1.1", features = ["blocking"] }
